Fix hero image overlapping the header by making the header on top using z-index

--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,4 +1,7 @@
 header {
+  position: relative;
+  z-index: 999;
+
   height: 48px;
   margin: 16px;
   margin-bottom: 0;
